Fix breadcrumb alignment && add spaces in WP info row

--- a/app/assets/stylesheets/layout/_breadcrumb.sass
+++ b/app/assets/stylesheets/layout/_breadcrumb.sass
@@ -93,7 +93,6 @@ ul.breadcrumb
 
 .wp-breadcrumb
   margin-top: 10px
-  margin-left: -10px
   height: initial
   ul.breadcrumb
     height: initial
